# Smart-MED-QA

./: CMakeLists.txt  Main.qml  README.md  main.cpp  qmldir
FluentUI/: CMakeLists.txt
FluentUI/src/: CMakeLists.txt
button/: DisplayFrame.qml  LoginPage.qml  MyComboBox.qml  RegisterPage.qml  Roundedbutton.qml  TermsWindow.qml  Viewbutton.qml
global/: func.js
pages/: AdministratorLogin.qml  Bookpage.qml  Case.qml  Chat.qml  ChatView.qml  ChatViewDoctor.qml  Datagenerate.qml  Diagnose.qml  Diagnose_inwindow.qml  EditDoctorInfo.qml  EditPatientInfo.qml  FreeConsultationPage.qml  HomePage.qml  In_Regeister.qml  RegisterPage.qml  ViewCase.qml  ViewCase（另一个复件）.qml  ViewCase（复件）.qml  ViewDoctorinfo.qml  ViewDoctorinfo_standby.qml  ViewPrescription.qml  table.qml  table1.qml  table2.qml  table3.qml  table4.qml  table5.qml  table6.qml
utils/: utils.cpp  utils.h
windows/: doctorwindow.qml  patientwindow.qml
